--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
     <h3 id="date">00.00.00</h2>
-    <form id = "todo-form">
-        <input type="text" placeholder="Write a To Do and press Enter" required />
-    </form>
-    <ul id="todo-list"></ul>
     <div id="quote">
         <span></span>
         <span></span>
     </div>
+    <form id = "todo-form">
+        <input type="text" placeholder="fill it with what you want" required />
+    </form>
+    <ul id="todo-list"></ul>
     <div id="weather">
         <span></span>
         <span></span>
